# Triangles

./: CMakeLists.txt  intersect.h  intrersect.cpp  main.cpp  triangle.h
geom/: geom.h  intersect.h
linal/: Matrix.cpp  Matrix.hpp
